# Portwhine

./: .gitignore  .pylintrc  Makefile  README.md  buf.gen.yaml  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: backend.yml  codeql.yml  dependabot-automerge.yml  (+3 more)
backend/: .dockerignore  Dockerfile  go.mod  go.sum
certs/: ca.cnf  gen_certs.sh  openssl.cnf  selfsigned-ca.crt  selfsigned-ca.key  selfsigned-server.crt  selfsigned-server.key  services.conf.template
deployments/: docker-compose.yml
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.certstream  Dockerfile.ffuf  Dockerfile.frontend  Dockerfile.humble  Dockerfile.ipaddress  Dockerfile.nmap  Dockerfile.resolver  Dockerfile.screenshot  Dockerfile.testssl  Dockerfile.webappanalyzer  entrypoint.api.sh
emk/: elasticsearch.yml  es_entrypoint.sh  kibana.yml  metricbeat.setup.yml  metricbeat.yml  roles.yml
frontend/: components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
kreya/: Cleanup Pipeline.krop  Create Pipeline-request.json  Create Pipeline.krop  Delete Pipeline.krop  Localhost.krenv  Pipeline.krop  Pipelines.krop  Portwhine.krproj  Single Trigger.krop  Single Worker.krop  Start Pipeline.krop  Stop Pipeline.krop  Testserver.krenv  Trigger.krop  Update Pipeline.krop  Worker.krop  directory.krpref
minio/: entrypoint.sh
nginx/: 404.html  50x.html  nginx.conf
redis/: redis.conf  redis.conf.template
setup/: setup.sh
traefik/: traefik.yml
(+422 files in other folders)
